...
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ido-Q8-JtI">
                    <rect key="frame" x="161.5" y="490.5" width="91" height="30"/>
                    <state key="normal" title="Authorize me"/>
                    <connections>
                        <action selector="touchAuthorizeMe" destination="-1" eventType="touchUpInside" id="nKz-Bf-qNp"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
