...
    }
    
    func setupInputTextView() {
        inputTextView.backgroundColor = .systemBackground
        inputTextView.textContainerInset = UIEdgeInsets(top: 6, left: 8, bottom: 4, right: 44)
        inputTextView.placeholderLabelInsets = UIEdgeInsets(top: 6, left: 12, bottom: 4, right: 33)
        inputTextView.placeholderLabel.text = "Message..."
        inputTextView.textColor = .white
        inputTextView.font = UIFont.preferredFont(forTextStyle: .body).withSize(16)
        inputTextView.layer.borderColor = UIColor.plainBackground.cgColor
        inputTextView.layer.borderWidth = 1.3
        inputTextView.layer.cornerRadius = 16.0
        inputTextView.layer.masksToBounds = true
...
